add validation and navbar and order page

--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -1,4 +1,4 @@
-<%- include('./partials/header.ejs', {title: "Home"}) %>
+<%- include('./partials/headerLoggedIn.ejs', {title: "Home"}) %>
 
 <table border="1">
     <h3>Menu</h3>
