--- a/views/partials/headerLoggedIn.ejs
+++ b/views/partials/headerLoggedIn.ejs
@@ -7,7 +7,7 @@
     <title><%- title %></title>
     <link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&display=swap" rel="stylesheet">
     <style>
-        body,html{
+    body,html{
     margin: 0;
     padding: 0;
     }
@@ -61,10 +61,9 @@
     <h1>BOBA<span>QUE</span></h1>
     <nav>
         <ul>
-            <li><a href="http://localhost:3000">Home</a></li>
-            <li><a href="http://localhost:3000/orders">Orders</a></li>
-            <li><a href="http://localhost:3000/register">Register</a></li>
-            <li><a href="http://localhost:3000/login">Sign In</a></li>
+            <li><a href="/">Home</a></li>
+            <li><a href="/orders">Orders</a></li>
+            <li><a href="/logout">Log Out</a></li>
         </ul>
     </nav>
 </header>
