--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,79 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <style>
-        body {
-          font-family: Arial, Helvetica, sans-serif;
-          background-color: black;
-        }
-        
-        * {
-          box-sizing: border-box;
-        }
-        
-        /* Add padding to containers */
-        .container {
-          padding: 16px;
-          background-color: white;
-        }
-        
-        /* Full-width input fields */
-        input[type=text], input[type=password], input[type=email] {
-          width: 100%;
-          padding: 15px;
-          margin: 5px 0 22px 0;
-          display: inline-block;
-          border: none;
-          background: #f1f1f1;
-        }
-        
-        input[type=text]:focus, input[type=password]:focus, input[type=email]:focus {
-          background-color: #ddd;
-          outline: none;
-        }
-        
-        /* Overwrite default styles of hr */
-        hr {
-          border: 1px solid #f1f1f1;
-          margin-bottom: 25px;
-        }
-        
-        /* Set a style for the submit button */
-        .registerbtn {
-          background-color: #04AA6D;
-          color: white;
-          padding: 16px 20px;
-          margin: 8px 0;
-          border: none;
-          cursor: pointer;
-          width: 100%;
-          opacity: 0.9;
-        }
-        
-        .registerbtn:hover {
-          opacity: 1;
-        }
-        
-        /* Add a blue text color to links */
-        a {
-          color: dodgerblue;
-        }
-        
-        /* Set a grey background color and center the text of the "sign in" section */
-        .signin {
-          background-color: #f1f1f1;
-          text-align: center;
-        }
-        </style>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login Page</title>
-</head>
-<body>
-    <form action="/login" method="POST">
+<%- include('./partials/headerLoggedOut.ejs', {title: "Login"}) %>
+<form action="/login" method="POST">
+  <%if (error) { %>
+    <script>alert(`Error! Wrong Username/Password`)</script>
+  <% } %>
         <div class="container">
-          <h1>Login</h1>
           <p>Please fill in this form to Login.</p>
           <hr>
           <label for="username"><b>Username</b></label>
@@ -82,13 +12,11 @@
           <label for="password"><b>Password</b></label>
           <input type="password" placeholder="Enter Password" name="password" id="password" required>
       
-          <button type="submit" class="registerbtn" onclick="alert(`Logging In!`)">Login</button>
+          <button type="submit" class="registerbtn">Login</button>
         </div>
         
         <div class="container signin">
           <p>Don't have an account? Register Here <a href="/register">Register</a>.</p>
         </div>
       </form>
-      
-</body>
-</html>
+<%- include('./partials/footer.ejs') %>
