--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -14,6 +14,8 @@
             <td><%= getRp(el.price) %></td>
             <td><%= el.description %></td>
             <td>
+                <a href="http://localhost:3000/menu/addTopping/<%= el.id %>">Add Topping</a>
+                |
                 <a href="http://localhost:3000/menu/buy/<%= el.id%>">Buy</a>
             </td>
         </tr>
@@ -25,16 +27,14 @@
     <tr>
         <th>Name</th>
         <th>Price</th>
-        <th>Description</th>
         <th>Action</th>
     </tr>
     <% data.forEach(el =>{ %>
         <tr>
             <td><%= el.name %></td>
             <td><%= getRp(el.price) %></td>
-            <td><%= el.description %></td>
             <td>
-                <a href="http://localhost:3000/topping/buy/<%= el.id%>">Add Topping</a>
+                <a href="http://localhost:3000/topping/<%= el.id%>">Add Drink</a>
             </td>
         </tr>
     <% }) %>
