--- a/views/partials/headerLoggedIn.ejs
+++ b/views/partials/headerLoggedIn.ejs
@@ -8,8 +8,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&display=swap" rel="stylesheet">
     <style>
     body,html{
-    margin: 0;
-    padding: 0;
+        margin: 0;
+        padding: 0;
     }
 
     header{
@@ -54,6 +54,71 @@
     a:hover{
         color: #f0c330;
         transition: 0.5s;
+    }
+    * {
+        box-sizing: border-box;
+    }
+
+
+    body {
+        font-family: Arial, Helvetica, sans-serif;
+    }
+
+    /* Float four columns side by side */
+    .column {
+        float: left;
+        width: 25%;
+        padding: 0 15px;
+    }
+
+    /* Remove extra left and right margins, due to padding */
+    .row {margin: 0 5px;}
+
+    /* Clear floats after the columns */
+    .row:after {
+        content: "";
+        display: table;
+        clear: both;
+    }
+
+    /* Responsive columns */
+    @media screen and (max-width: 600px) {
+    .column {
+        width: 100%;
+        display: block;
+        margin-bottom: 30px;
+    }
+    }
+
+    /* Style the counter cards */
+    .card {
+        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+        padding: 8px;
+        text-align: center;
+        background-color: #f1f1f1;
+    }
+    img {
+        border-radius: 5px 5px 0 0;
+    }
+    .button {
+        padding: 15px 25px;
+        font-size: 24px;
+        text-align: center;
+        cursor: pointer;
+        outline: none;
+        color: #fff;
+        background-color: coral;
+        border: none;
+        border-radius: 15px;
+        box-shadow: 0 9px #999;
+    }
+
+    .button:hover {background-color: rgb(216, 87, 40)}
+
+    .button:active {
+        background-color: rgb(184, 69, 28);
+        box-shadow: 0 5px #666;
+        transform: translateY(4px);
     }
     </style>
 </head>
