--- a/views/homepageAdmin.ejs
+++ b/views/homepageAdmin.ejs
@@ -1,7 +1,9 @@
 <%- include('./partials/headerAdmin.ejs', {title: "Home"}) %>
-
-<table border="1">
-    <h3>Menu</h3>
+<center>
+    <h2>Menu</h2>
+</center>
+<br>
+<table id="table">
     <tr>
         <th>Name</th>
         <th>Price</th>
@@ -21,9 +23,18 @@
         </tr>
     <% }) %>
 </table>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
 
-<table border="1">
-    <h3>Toppings</h3>
+<center>
+    <h2>Toppings</h2>
+</center>
+<br>
+<table id="table">
     <tr>
         <th>Name</th>
         <th>Price</th>
