--- a/views/partials/headerAdmin.ejs
+++ b/views/partials/headerAdmin.ejs
@@ -12,6 +12,29 @@
     padding: 0;
     }
 
+    #table {
+        font-family: Arial, Helvetica, sans-serif;
+        border-collapse: collapse;
+        width: 100%;
+    }
+
+    #table td, #table th {
+        border: 1px solid #ddd;
+        padding: 8px;
+    }
+
+    #table tr:nth-child(even){background-color: #f2f2f2;}
+
+    #table tr:hover {background-color: #ddd;}
+
+    #table th {
+        padding-top: 12px;
+        padding-bottom: 12px;
+        text-align: left;
+        background-color: coral;
+        color: white;
+    }
+
     header{
         width: 100%;
         height: 70px;
